user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  namespace: linklab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
  - host: kubernetes.tinylink.cn
    http:
      paths:
      - path: /linklab/device-control-v2/user-service/api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: 
              number: 8080
